# scraping

./: .markdownlint.json  .pylintrc  audoble_books.csv  automaion-suggestions.md  pyproject.toml  scraping_env.yaml  setup.py
beautiful_soup/: main.py
output/: audiobooks.csv
references/selenium/project1/: my_pagination.py
src/aggregators/: __init__.py
src/aggregators/imports/: selenium_imports.py
src/aggregators/spider/: interface.py
src/aggregators/spider/imports/: __init__.py  data.py
src/aggregators/spider/selenium/: __init__.py  spider.py
src/beautiful_soup/: __init__.py  multi_movie.py  multi_pages.py  one_movie.py
src/domain/beautiful_soup/: __init__.py  multi_movie.py  multi_pages.py
src/domain/selenium/: __init__.py
src/domain/selenium/audible_bot/: __init__.py  audiobooks.py
src/domain/selenium/audible_bot/without_DDD/: headless_mode.py  spider.py
src/entities/: __init__.py  container.py  locator.py
src/entities/spider/selenium/: spider.py
src/imports/: __init__.py  data.py  selenium_imports.py  typing.py
src/main/: bs4.py  selenium.py
src/news_scraper/: ingest_data.py  scrape_sites.py
src/repository/: spider.py
src/run/: __init__.py  main.py  main_selenium.py  run.py
src/selenium/: __init__.py  adamchoi.py
src/selenium/audible_bot/: __init__.py  headless_mode.py  spider.py
