[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newsllama"
version = "0.1.0"
authors = [{ name = "Ken Cat" }]
description = "AI based data extraction for news sites."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests", "beautifulsoup4", "pydantic", "ollama", "doggopyr"]

[tool.setuptools.packages.find]
where = ["src"]
